# 262a-gdp-project

./: gdp_agent.hpp
262a-gdp-project/: gdp_agent.hpp
combined-docker/: Dockerfile
combined-docker/fcl/: CMakeLists.txt
combined-docker/gdp/: .valgrind.supp  README-CAAPI.md  README-developers.md  README-server-install.md  README.md
coordinator/: CMakeLists.txt  Makefile  README  cmd.txt  dummy_client.cpp  input.json  script.py  test.json  trust-policy.json
coordinator/include/: client.hpp  coordinator.hpp  gdp_agent.hpp  lambda_service.h  parse.h  problem_statement.h  shared.h
coordinator/lambda_images/: Makefile  lambda_table  mpl_robot  test_local_aggregator  test_local_aggregator.cpp  test_local_compute  test_local_compute.cpp
coordinator/output/: output_file.txt
coordinator/src/: example_client.cpp  example_coordinator.cpp
gdp-docker/: Dockerfile
gdp-docker/gdp/: .gitignore  .valgrindrc  Makefile  README-compiling.md  README-deb.md
mplambda/: CMakeLists.txt
mplambda-docker/: Dockerfile
mplambda-gdp/: CMakeLists.txt  input.json
mplambda-gdp/include/: gdp_agent.hpp
mplambda-gdp/src/: mpl_coordinator.cpp  mpl_lambda_aws.cpp  mpl_lambda_invoke.cpp  mpl_lambda_pseudo.cpp  mpl_robot.cpp
mplambda/src/: mpl_lambda_pseudo.cpp
serverless-client/: :q  Makefile  dummyclient
serverless-client/adm/: 10-scgi.conf.template  gdp-rest-wrapper.sh  gdplogd.service.template  update-license.awk
serverless-client/gdp_agent/: gdp_agent.cpp  gdp_agent.h
serverless-client/include/: ServerlessClient.h  ep_app.h  ep_assert.h  ep_b64.h  ep_conf.h  ep_crypto.h  (+23 more)
(+528 files in other folders)
